# flexiblas

./: .editorconfig  .gitignore  .gitlab-ci.yml  .version  CHANGELOG  CITATION.cff  CMakeLists.txt  CODE  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING.ADDITIONAL  COPYING.NETLIB  CTestCustom.cmake.in  INSTALL.md  ISSUES.md  ISSUES.txt  README  README.md  ToolChain_w32.cmake  ToolChain_w64.cmake  cmake_uninstall.cmake.in  config.h.in  create_blas.sh  flexiblas.pc.in  flexiblas.spec  flexiblas_api.pc.in
contributed/lapack-3.12.0/: CMakeLists.txt
contributed/lapack-3.12.1/: CMakeLists.txt
contributed/lapack-3.7.0/: CMakeLists.txt
contributed/lapack-3.9.0/: CMakeLists.txt
contributed/lapacke-3.6.1/: CMakeLists.txt
contributed/lapacke-3.8.0/: CMakeLists.txt
contributed/lapacke-3.9.0/: CMakeLists.txt
contributed/netlib-blas/: CMakeLists.txt  info.c
examples/: CMakeLists.txt  benchmark.c  benchmark_daxpy.c  benchmark_dgemm.c  benchmark_dgemm_api.c  benchmark_dgemv.c  benchmark_dgetrf.c  benchmark_overhead_quickreturn.c  demo_1.c  demo_1s.c  demo_2.c  demo_api.c  demo_api_standalone.c  demo_axpby.c  demo_imatcopy.c  demo_lapacke.c  demo_multithread.c  demo_omatcopy.c  demo_set_threads.c  demo_xerbla.c  test_zdotc_fortran.f90  test_zdotc_gnu.c  test_zdotc_intel.c
libcscutils/: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  Makefile  README.md  config.h.in  configoptions.md  test.ini
libcscutils/CMakeModules/: CCompilerSettings.cmake  CMakeCheckCompilerFlagCommonPatterns_old.cmake  CMakeHelpers.cmake  CMakeLists.txt  CXXCompilerSettings.cmake  CheckAttributeExists.cmake  CheckBlasZdotcMKL.cmake  CheckFeatureNeeded.cmake  CheckFortranCompilerFlag_meta.cmake  CheckFortranCompilerFlag_old.cmake  CheckFortranSourceCompiles.cmake  CheckFortranSourceCompiles_meta.cmake  CheckFortranSourceCompiles_old.cmake  CheckLapackRoutines.cmake  CheckPolicy.cmake  CheckRestrict.cmake  CheckThreadLocal.cmake  EnableCastQual.cmake  EnableConversionC.cmake  EnableConversionCXX.cmake  EnableConversionFortran.cmake  EnableLTO.cmake  EnableMayBeUninitialized.cmake  EnablePedantic.cmake  EnablePedanticC.cmake  EnablePedanticCXX.cmake  EnablePedanticFortran.cmake  EnableStrictPrototypesC.cmake  EnableStringOpTruncation.cmake  FindAMD.cmake  FindARCHIVE.cmake  FindARPACK.cmake  FindArchive.cmake  FindBLAS.cmake  FindBLAS64.cmake  FindCHOLMOD.cmake  FindCOLAMD.cmake  FindCPPCHECK.cmake  FindCPUFREQ.cmake  FindCSPARSE.cmake  (+46 more)
libcscutils/contrib/: README
libcscutils/examples/: CMakeLists.txt  demo_background_worker.c  demo_hardware.c  demo_hashtable.c  demo_hdf.c  demo_hdf5_read.c  demo_hdf_f.f90  demo_inifile.c  demo_io.c  demo_lua.c  demo_lua.lua  demo_lua_f.f90  demo_lua_incode.lua  demo_map.c  demo_slist.c  demo_sysinfo.c  demo_table.c  demo_table_fortran.f90
libcscutils/misc/: cmake-latest.sh  cmake-runs.yml  cmake-versions.sh
libcscutils/src/: CMakeLists.txt  doc_main.c
netlib/: CMakeLists.txt  cher.f  cher2.f  cherk.f  chpr.f  chpr2.f  ctbmv.f  ctbsv.f  ctpmv.f  ctpsv.f  ctrmv.f  ctrsv.f  drotmg.f  dspr.f  dspr2.f  dsyr.f  dsyr2.f  dtbmv.f  dtbsv.f  dtpmv.f  dtpsv.f  dtrmv.f  dtrsv.f  ffiles  info.c  sdsdot.f  srotmg.f  sspr.f  sspr2.f  ssyr.f  ssyr2.f  stbmv.f  stbsv.f  stpmv.f  stpsv.f  strmv.f  strsv.f  xerbla.f  zher.f  zher2.f  (+9 more)
src/: .set_num_threads.c.swp  CMakeLists.txt  cabs.c  cblas_f77.h  cblas_xerbla.c  common.c  complex.c  complex16.c  double.c  dummy_lib.c  extblas.h  flexiblas-config.c  flexiblas.c  flexiblas.h  flexiblas_api.c  flexiblas_api.h  flexiblas_api.h.in  flexiblas_api_standalone.c  flexiblas_backend.h  flexiblas_common.h  flexiblas_dummy_cblas.h  flexiblas_dummy_fortran.h  flexiblas_fortran_char_len.h  flexiblas_fortran_mangle.h  flexiblas_hook_structure.h  flexiblas_info.h  flexiblas_mgmt.h  flexiblas_printf.c  flexiblas_real_calls.h  flexiblas_real_cblas_calls.h  flexiblas_real_extblas_calls.h  flexiblas_structure_blas.h  flexiblas_structure_cblas.h  flexiblas_structures.h  flexiblas_tool.c  hashtable.c  hashtable.h  helper.h  hook_loader.c  hooks.c  (+22 more)
src/cblas_interface/: .cblas_xerbla.c.swp  cblas_caxpby.c  cblas_caxpy.c  cblas_ccopy.c  cblas_cdotc_sub.c  cblas_cdotu_sub.c  cblas_cgbmv.c  cblas_cgeadd.c  cblas_cgemm.c  cblas_cgemmt.c  cblas_cgemmtr.c  cblas_cgemv.c  cblas_cgerc.c  cblas_cgeru.c  cblas_chbmv.c  cblas_chemm.c  cblas_chemv.c  cblas_cher.c  cblas_cher2.c  cblas_cher2k.c  cblas_cherk.c  cblas_chpmv.c  cblas_chpr.c  cblas_chpr2.c  cblas_cimatcopy.c  cblas_comatcopy.c  cblas_crotg.c  cblas_cscal.c  cblas_csrot.c  cblas_csscal.c  cblas_cswap.c  cblas_csymm.c  cblas_csyr2k.c  cblas_csyrk.c  cblas_ctbmv.c  cblas_ctbsv.c  cblas_ctpmv.c  cblas_ctpsv.c  cblas_ctrmm.c  cblas_ctrmv.c  (+138 more)
src/ext_blas/: caxpby.f  caxpby.f90  cblas_caxpby.c  cblas_cgeadd.c  cblas_cimatcopy.c  cblas_comatcopy.c  cblas_daxpby.c  cblas_dgeadd.c  cblas_dimatcopy.c  cblas_domatcopy.c  cblas_saxpby.c  cblas_sgeadd.c  cblas_simatcopy.c  cblas_somatcopy.c  cblas_zaxpby.c  cblas_zgeadd.c  cblas_zimatcopy.c  cblas_zomatcopy.c  cgeadd.f90  cimatcopy.c  comatcopy.c  daxpby.f  daxpby.f90  dcabs1.f  dcabs1.f90  dgeadd.f90  dimatcopy.c  domatcopy.c  imatcopy_kernel.c  omatcopy_kernel.c  saxpby.f  saxpby.f90  scabs1.f  scabs1.f90  sgeadd.f90  simatcopy.c  somatcopy.c  zaxpby.f  zaxpby.f90  zgeadd.f90  (+4 more)
src/fallback_blas/: CMakeLists.txt  caxpby.f90  cblas_caxpby.c  cblas_cgeadd.c  cblas_cimatcopy.c  cblas_comatcopy.c  cblas_daxpby.c  cblas_dgeadd.c  cblas_dimatcopy.c  cblas_domatcopy.c  cblas_f77_ext.h  cblas_saxpby.c  cblas_sgeadd.c  cblas_simatcopy.c  cblas_somatcopy.c  cblas_zaxpby.c  cblas_zgeadd.c  cblas_zimatcopy.c  cblas_zomatcopy.c  cgeadd.f90  cgemmtr.f  cimatcopy.c  comatcopy.c  daxpby.f90  dgeadd.f90  dgemmtr.f  dimatcopy.c  domatcopy.c  dummy.c  imatcopy_kernel.c  info.c  omatcopy_kernel.c  saxpby.f90  sgeadd.f90  sgemmtr.f  simatcopy.c  somatcopy.c  zaxpby.f90  zgeadd.f90  zgemmtr.f  (+4 more)
src/fallback_lapack/: CMakeLists.txt  dummy_3_10_0-wodprc.c  dummy_3_10_0.c  dummy_3_10_0_wodprc.c  dummy_3_10_1-wodprc.c  dummy_3_10_1.c  dummy_3_11_0.c  (+34 more)
test/: CMakeLists.txt
(+7261 files in other folders)
